Interpreter/tests/negative-examples/substringNegativeSize.cl
class Main inherits IO {
  main() : Object { 
    "hello whirled".substr(5, 0 - 3)
  } ;
} ; 
